# RogueRover

./: .gitignore
rr_ws/Rosmaster_Lib.egg-info/: SOURCES.txt
rr_ws/install/: local_setup.sh  setup.sh
rr_ws/install/rr_description/share/rr_description/: package.dsv  package.ps1  package.sh  package.xml
rr_ws/install/rr_description/share/rr_description/launch/: start_nodes_launch.py
rr_ws/install/rr_description/share/rr_description/urdf/: RogueRover.urdf
rr_ws/install/rr_display/lib/rr_display/: display
rr_ws/install/rr_display/share/rr_display/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rr_ws/install/rr_msgs/share/rr_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rr_ws/install/rr_msgs/share/rr_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rr_msgs__rosidl_generator_cExport.cmake  export_rr_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_rr_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  (+7 more)
rr_ws/install/rr_velocity/lib/rr_velocity/: odom_pub  vel_raw_pub
rr_ws/install/rr_velocity/share/rr_velocity/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rr_ws/log/: latest_build
rr_ws/src/rr_description/: package.xml  setup.py
rr_ws/src/rr_description/launch/: start_nodes_launch.py
rr_ws/src/rr_description/urdf/: RogueRover.gazebo.urdf.xacro  RogueRover.gazebo.xacro  RogueRover.urdf  RogueRover.urdf.xacro
rr_ws/src/rr_display/: package.xml  setup.cfg  setup.py
rr_ws/src/rr_display/rr_display/: display.py
rr_ws/src/rr_msgs/: CMakeLists.txt  package.xml
rr_ws/src/rr_msgs/msg/: Target.msg
rr_ws/src/rr_velocity/: package.xml  setup.cfg  setup.py
rr_ws/src/rr_velocity/rr_velocity/: odom_pub.py  vel_raw_pub.py
(+154 files in other folders)
